--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://github.com/Mors20/3D-MedDiffusion" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -104,7 +104,7 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="https://huggingface.co/YOUR-MODEL-HERE" target="_blank"
+                  <a href="https://huggingface.co/MMorss/3D-MedDiffusion" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" 
